flask-dev-stg-prod-from-env/base/testconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  containers:
    - name: test-container
      image: registry.k8s.io/busybox
      command: [ "/bin/echo", "$(DBHOST) $(DBNAME) $(DBUSER)" ]
  restartPolicy: Never
