flask-dev-stg-prod-from-env/base/flask-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    app: flask
spec:
  ports:
    - port: 30100
  selector:
    app: flask
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    app: flask
spec:
  selector:
    matchLabels:
      app: flask
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flask
        tier: frontend
    spec:
      containers:
      - image: josuecodjo/flask_app
        imagePullPolicy: Always
        name: flask
        # command: ["/bin/bash"]
        # args: ["-c","while sleep 0.01; do echo 'OK'; done"]
        #args: ["-c","/opt/app/start_app.sh"]
        ports:
        - containerPort: 30100
          name: flask
        volumeMounts:
        - name: flask-persistent-storage
          mountPath: /tmp
      volumes:
      - name: flask-persistent-storage
        persistentVolumeClaim:
          claimName: flask-pv-claim
