flask-dev-stg-prod-from-env/base/postgresql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-postgresql
  labels:
    app: flask
spec:
  ports:
    - port: 5432
  selector:
    app: flask
    tier: postgresql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-postgresql
  labels:
    app: flask
spec:
  selector:
    matchLabels:
      app: flask
      tier: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flask
        tier: postgresql
    spec:
      containers:
      - image: postgres:13
        name: postgresql
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - name: postgresql-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-pv-claim
